--- a/nav-bar/package.json
+++ b/nav-bar/package.json
@@ -58,6 +58,8 @@
     "@types/react-dom": "^17.0.9",
     "@types/systemjs": "^6.1.1",
     "@types/webpack-env": "^1.16.2",
+    "crypto-js": "^4.2.0",
+    "js-cookie": "^3.0.5",
     "mitt": "^3.0.1",
     "postis": "^2.2.0",
     "react": "^17.0.2",
