--- a/root/package.json
+++ b/root/package.json
@@ -43,6 +43,8 @@
     "@types/jest": "^27.0.1",
     "@types/systemjs": "^6.1.1",
     "@types/webpack-env": "^1.16.2",
+    "crypto-js": "^4.2.0",
+    "js-cookie": "^3.0.5",
     "postis": "^2.2.0",
     "react": "^18.3.1",
     "react-router-dom": "^6.23.1",
